crates/ddlog-syntax/tests/validation/fail/missing_column_commas.dl
// kind:item validate:true pass:false ignore:false
relation Foo(foo: Bar bar: Baz)
multiset Foo(foo: Bar bar: Baz)
stream Foo(foo: Bar bar: Baz)
